--- a/Assignment/Assignment - II/app/src/main/res/values/strings.xml
+++ b/Assignment/Assignment - II/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">GroceryShop</string>
     <string name="choosefile">Choose File</string>
+    <string name="user_open">Open navigation drawer</string>
+    <string name="user_close">Close navigation drawer</string>
 </resources>
